Change app name and short name in manifest.json
Updated the app name and short name in the manifest.

--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,13 @@
   "background_color": "#ffffff",
   "dir": "ltr",
   "display": "standalone",
-  "name": "copppppsfd.github",
+  "name": "DapurBahagia",
   "orientation": "any",
   "scope": "/",
-  "short_name": "copppppsfd.github",
+  "short_name": "MBG",
   "start_url": "/",
-  "theme_color": "#ffffff"
+  "theme_color": "#ffffff",
+  "categories": [
+    "food"
+  ]
 }
